# poetry-container-image-size

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
dockerfiles/: Dockerfile  Dockerfile_all_in_prod  Dockerfile_all_in_tests  Dockerfile_export_requirements_prod  Dockerfile_export_requirements_tests  Dockerfile_venv_prod  Dockerfile_venv_tests
example_application/: main.py  schemas.py
example_application_tests/: conftest.py  test_items.py  test_lists.py
