[tool.poetry]
name = "example-application"
version = "0.1.0"
description = ""
authors = ["Mikołaj Pęczkowski"]
packages = [{include = "example_application"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.0"
uvicorn = "0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4 "
httpx = "0.26.0"
coverage = "7.4.0"
black = "23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
